# QtTimeCalculator

./: README.txt
src/: CMakeLists.txt  DlgTimeCalc.cpp  DlgTimeCalc.h  TimeCalculatorGui.ui  main.cpp
